fixing images on mobile

--- a/src/components/Content/Section/SectionImage/index.module.sass
+++ b/src/components/Content/Section/SectionImage/index.module.sass
@@ -3,8 +3,6 @@
 .Main
   padding-bottom: $space-s
   width: 100%
-  display: flex
-  flex-direction: row-reverse
   margin: 0
   
   .image
@@ -12,6 +10,8 @@
     
   @include min($screen-m)
     padding-bottom: $space-m
+    display: flex
+    flex-direction: row-reverse
     
     .image
       width: 80%
@@ -24,7 +24,7 @@
   .caption
     @extend %body-xs
     color: rgba($black, 0.7)
-    padding: units(2)
+    padding-top: units(2)
     font-style: italic
     
     @include min($screen-m)
